# Feature-Projects

./: Activity_Diagram.drawio  Arquichecture.drawio  README.md  Requeriment_Diagram.drawio  Secuence Diagram.drawio  flow_diagrams.drawio
E-commerce Platform/: README.md
E-commerce Platform/Docs/: Activity_Diagram.drawio  Arquichecture.drawio  Class_Diagram.drawio  Database Executable queries.sql
E-commerce Platform/Source_code/Authentication/: micronaut-cli.yml  pom.xml
E-commerce Platform/Source_code/Authentication/src/main/resources/: application.toml
E-commerce Platform/Source_code/Authorization/: micronaut-cli.yml  pom.xml
E-commerce Platform/Source_code/Authorization/src/main/resources/: application.toml
E-commerce Platform/Source_code/Login/: micronaut-cli.yml  pom.xml
E-commerce Platform/Source_code/Login/src/main/resources/: application.toml
E-commerce Platform/Source_code/Register/: .gitignore  README.md  docker-compose.yml  micronaut-cli.yml  pom.xml
Encryption Algorithm/Encript/: Encryption.asv  Encryption.ipynb  correlation.asv  correlation.mlx
MarketPredictionSystem (MPS)/: .gitignore
MarketPredictionSystem (MPS)/AnalyticalCore/: README.md  main.py  pyproject.toml
MarketPredictionSystem (MPS)/AnalyticalCore/DataGating/: __init__.py
MarketPredictionSystem (MPS)/AnalyticalCore/DataIngest/: __init__.py
MarketPredictionSystem (MPS)/AnalyticalCore/DataIngest/Endpoints/: FinancialData.py
MarketPredictionSystem (MPS)/AnalyticalCore/DataProcessing/: __init__.py
MarketPredictionSystem (MPS)/AnalyticalCore/Models/: FinancialOutPut.py
(+45 files in other folders)
