[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytical-core"
version = "0.1.0"
description = "Analytical core for Market Prediction System"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi[standard]",
    "yfinance",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["DataIngest*", "DataProcessing*", "DataGating*"]
